--- a/yixue-service/src/main/resources/templates/registerTemplate.html
+++ b/yixue-service/src/main/resources/templates/registerTemplate.html
@@ -136,7 +136,7 @@
         <div id="content_top">
           <strong>尊敬的用户：您好！</strong>
           <strong>
-            您正在进行易学博客的<span>注册账号</span>操作，请在验证码中输入以下验证码完成操作：
+            您正在进行yixue博客的<span>注册账号</span>操作，请在验证码中输入以下验证码完成操作：
           </strong>
           <div id="verificationCode">
             <button class="button" th:each="a:${verifyCode}">[[${a}]]</button>
@@ -154,7 +154,7 @@
           <p>此为系统邮件，请勿回复<br>
             请保管好您的邮箱，避免账号被他人盗用
           </p>
-          <p id="sign">——易学博客</p>
+          <p id="sign">——yixue博客</p>
         </div>
       </div>
     </td>
